@@ -44,6 +44,7 @@ enum
 	COL_MEM,
 	COL_PIXBUF,
 	COL_POINTER,
+	COL_TOOLTIP,
 	NUM_COLUMNS
 };
 
