@@ -1,5 +1,16 @@
 2006-07-06  Benoît Dejean  <benoit@placenet.org>
 
+	* src/procman.h:
+	* src/proctable.c: (create_proctree), (proctable_new),
+	(proctable_free_info), (insert_info_to_tree), (procinfo_new):
+	* src/proctable.h:
+	
+	Display escaped arguments in COL_ARGS.
+	The sexy tooltip still displays raw arguments.
+	Closes #341095.
+
+2006-07-06  Benoît Dejean  <benoit@placenet.org>
+
 	* src/procman.c: (procman_get_tree_state):
 
 	If a column is visible, ensure it really is.
